fix attach button, improve expander contrast

--- a/backup/custom-access.css
+++ b/backup/custom-access.css
@@ -1,5 +1,5 @@
 /* VERSION TRACKER */
-/* 1.05 - disabled new-ticket video screen capture changes (19/5/2022) */
+/* 1.06 - AT/Theme updates, Sprint-26 (19/7/2022) */
 
 /* Adjust alignment of "Helpdesk Title". */
 /* (JC, 24.9.2021) */
@@ -248,6 +248,14 @@ caption {
   margin-right: 8px;
 }
 
+/* Better contrast for expander '>' in category list */
+/* (JC, 19/7/2022 */
+.categories .treeList .expander {
+  opacity: 1;
+  cursor: context-menu;
+  font-weight: 900;
+  filter: brightness(90%) contrast(110%);
+}
 
 /* - - - - - - - - - - - - - - - - - - - - - - - */
 /* Design edit to stack custom fields vertically */
@@ -363,6 +371,14 @@ input[type="text"], input[type="number"], input[type="password"], input[type="em
   outline-offset: 0;
   box-shadow: inset 0 0 0 2px #000 !important;
   border-radius: 0;
+}
+
+/* visible tables inside richeditor */
+/* (JC, 19/7/2022) */
+.richeditor table, .richeditor td, .richeditor th {
+  border: 1px solid #000000;
+  text-align: left;
+  border-collapse: collapse;
 }
 
 /* Tag box on ticket details page */
@@ -501,7 +517,9 @@ table.admintable input[name="btnResetDesign"], table.admintable input[name="btnR
   color: black;
 }
 
-.fileupload a {
+/* more specific selector and inline-block, prevent kb full-width */
+/* (JC, 19/7/2022) */
+.fileupload a#attachFile {
   height: 26px;
   background-color: #cecece;
   padding: 9px 14px 0 8px;
@@ -510,7 +528,11 @@ table.admintable input[name="btnResetDesign"], table.admintable input[name="btnR
   border-bottom: 2px solid #505a5f;
   font-size: 14px;
   font-weight: bold;
-  display: block;
+  display: inline-block;
+}
+
+.fileupload a#attachFile:hover {
+    filter: brightness(90%) contrast(110%);
 }
 
 #aCapture {
